exports[`test a.js 1`] = `
"/* @providesModule IncrModuleA */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @providesModule IncrModuleA */
"
`;

exports[`test b.js 1`] = `
"/* @providesModule IncrModuleB
   @flow
*/

var A = require(\'IncrModuleA\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @providesModule IncrModuleB
   @flow
*/

var A = require(\"IncrModuleA\");
"
`;

exports[`test dup_a.js 1`] = `
"/* @providesModule IncrModuleA */

var x:string = 0;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @providesModule IncrModuleA */

var x: string = 0;
"
`;
